[pom] Remove obsolete usage of allow attach self for jmockit