@@ -289,9 +289,6 @@
         <sb-contrib.version>7.6.0</sb-contrib.version>
         <yuicompressor.version>2.4.8</yuicompressor.version>
 
-        <!-- Surefire Argline -->
-        <argLine>-Djdk.attach.allowAttachSelf</argLine>
-
         <!-- Verification Checks -->
         <error-prone.failOnViolations>-XepAllErrorsAsWarnings</error-prone.failOnViolations>
     </properties>
